@@ -1,3 +1,7 @@
+Wed Oct 29 12:26:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c: Moved .xpm files in root directory to xpm directory
+
 Tue Oct 28 21:10:39 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>
 
 	* gtkoptions.c - add Turkish and Icelandic to language options
